# http-conformance

./: .env.example  .gitattributes  .gitconfig  .gitignore  .gitmodules  CITATION.cff  LICENSE  README.md  conformance_checker.py  fix_dpkt.sh  pyproject.toml  run_checks.py  testcases.py  tested_origins.csv
helpers/: analysis.py  analysis_paper.ipynb  analysis_stats.ipynb  db_util.py  direct_util.py  redbot_requestor.py  requestors.py  syntax_validation.py  util.py
helpers/output/: dangerous_rules.tex  hosts_per_violation_dangerous_results_popular_2023_05_10.tex  hosts_per_violation_results_local_2023_05_10.tex  hosts_per_violation_results_popular_2023_05_10.tex  matrix_dangerous_results_local_2023_05_10.tex  matrix_results_local_2023_05_10.tex  origins_per_violation_results_local_2023_05_10.tex  origins_per_violation_results_popular_2023_05_10.tex  red_overview_results_local_2023_05_10.tex  red_overview_results_popular_2023_05_10.tex  redbot_results_local_2023_05_10.tex  redbot_results_popular_2023_05_10.tex  sites_per_violation_results_local_2023_05_10.tex  sites_per_violation_results_popular_2023_05_10.tex  sources_overview.tex  test_matrix.tex  test_overview.tex
helpers/syntax/: csp.py  expect_ct.py  rfc3986.py  rfc5234.py  rfc5322.py  rfc5646.py  rfc5789.py  rfc5987.py  rfc5988.py  rfc6454.py  rfc6797.py  rfc7230.py  rfc7231.py  rfc7232.py  rfc7233.py  rfc7234.py  rfc7235.py  rfc7838.py  rfc8941.py
sanity_check/: check_testcases.py  sanity.ipynb  serve_testcases.py
sanity_check/certs/: cert.pem  key.pem
testbed/: docker-compose.yml  versions.tex
(+13 files in other folders)
